Added even more tests for the .NET-TwinCAT-verifier. Renamed some of the tests to use a common name-schema.

--- a/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
+++ b/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
@@ -68,15 +68,19 @@
   <ItemGroup>
     <Compile Include="AutomationInterface.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="FB_AssertEveryFailedTestTwiceArrayVersion_Asserter.cs" />
-    <Compile Include="FB_CreateDisabledTest_Asserter.cs" />
-    <Compile Include="FB_CreateFourTestsWithSameName_Asserter.cs" />
-    <Compile Include="FB_AssertEveryFailedTestTwice_Asserter.cs" />
-    <Compile Include="FB_AssertTrueFalse_Test_Asserter.cs" />
-    <Compile Include="FB_AnyToUnionValue_Test_Asserter.cs" />
-    <Compile Include="FB_PrimitiveTypes_Test_Asserter.cs" />
-    <Compile Include="FB_AnyPrimitiveTypes_Test.cs" />
-    <Compile Include="FB_ArrayPrimitiveTypes_Test_Asserter.cs" />
+    <Compile Include="FB_AssertEveryFailedTestTwiceArrayVersion.cs" />
+    <Compile Include="FB_MultipleAssertWithSameParametersInDifferentCyclesButWithDifferentTests.cs" />
+    <Compile Include="FB_MultipleAssertWithSameParametersInDifferentCyclesAndInSameTest.cs" />
+    <Compile Include="FB_AdjustAssertFailureMessageToMax252CharLengthTest.cs" />
+    <Compile Include="FB_MultipleAssertWithSameParametersInSameCycleWithSameTest.cs" />
+    <Compile Include="FB_CreateDisabledTest.cs" />
+    <Compile Include="FB_CreateFourTestsWithSameName.cs" />
+    <Compile Include="FB_AssertEveryFailedTestTwice.cs" />
+    <Compile Include="FB_AssertTrueFalse.cs" />
+    <Compile Include="FB_AnyToUnionValue.cs" />
+    <Compile Include="FB_PrimitiveTypes.cs" />
+    <Compile Include="FB_AnyPrimitiveTypes.cs" />
+    <Compile Include="FB_ArrayPrimitiveTypes.cs" />
     <Compile Include="MessageFilter.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
