--- a/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
+++ b/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
@@ -1,31 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9D459D06-4B63-4ABE-9E47-E2C7D190FA2A}</ProjectGuid>
+    <ProjectGuid>{13F197A8-6EF6-4799-A221-37B97BA42100}</ProjectGuid>
     <OutputType>Exe</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TcUnit.Verifier</RootNamespace>
     <AssemblyName>TcUnit-Verifier</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -55,6 +41,7 @@
     </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -62,25 +49,24 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutomationInterface.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="FB_AssertEveryFailedTestTwiceArrayVersion.cs" />
-    <Compile Include="FB_MultipleAssertWithSameParametersInDifferentCyclesButWithDifferentTests.cs" />
-    <Compile Include="FB_MultipleAssertWithSameParametersInDifferentCyclesAndInSameTest.cs" />
     <Compile Include="FB_AdjustAssertFailureMessageToMax252CharLengthTest.cs" />
-    <Compile Include="FB_MultipleAssertWithSameParametersInSameCycleWithSameTest.cs" />
+    <Compile Include="FB_AnyPrimitiveTypes.cs" />
+    <Compile Include="FB_AnyToUnionValue.cs" />
+    <Compile Include="FB_ArrayPrimitiveTypes.cs" />
+    <Compile Include="FB_AssertEveryFailedTestTwice.cs" />
+    <Compile Include="FB_AssertEveryFailedTestTwiceArrayVersion.cs" />
+    <Compile Include="FB_AssertTrueFalse.cs" />
     <Compile Include="FB_CreateDisabledTest.cs" />
     <Compile Include="FB_CreateFourTestsWithSameName.cs" />
-    <Compile Include="FB_AssertEveryFailedTestTwice.cs" />
-    <Compile Include="FB_AssertTrueFalse.cs" />
-    <Compile Include="FB_AnyToUnionValue.cs" />
+    <Compile Include="FB_MultipleAssertWithSameParametersInDifferentCyclesAndInSameTest.cs" />
+    <Compile Include="FB_MultipleAssertWithSameParametersInDifferentCyclesButWithDifferentTests.cs" />
+    <Compile Include="FB_MultipleAssertWithSameParametersInSameCycleWithSameTest.cs" />
     <Compile Include="FB_PrimitiveTypes.cs" />
-    <Compile Include="FB_AnyPrimitiveTypes.cs" />
-    <Compile Include="FB_ArrayPrimitiveTypes.cs" />
     <Compile Include="MessageFilter.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
@@ -90,9 +76,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="log4net.config">
+    <Content Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -114,17 +100,12 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
-      <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 and x64%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
 </Project>
