Added new tests for TEST_FINISHED_NAMED()-function. FB_TestFinishedNamed to be implemented.

--- a/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
+++ b/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
@@ -60,6 +60,7 @@
     <Compile Include="FB_ArrayPrimitiveTypes.cs" />
     <Compile Include="FB_AssertEveryFailedTestTwice.cs" />
     <Compile Include="FB_AssertEveryFailedTestTwiceArrayVersion.cs" />
+    <Compile Include="FB_TestFinishedNamed.cs" />
     <Compile Include="FB_CheckIfSpecificTestIsFinished.cs" />
     <Compile Include="FB_AssertTrueFalse.cs" />
     <Compile Include="FB_CreateDisabledTest.cs" />
