Added *.tmcRefac and *.xti.bak to the .gitignore-file. Updated the VisualStudio-gitignore part with the latest VisualStudio.gitignore template file.

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@
 *.compiled-library
 *.compileinfo
 *.tmc
+*.tmcRefac
 *.library
 *.project.~u
 *.tsproj.bak
+*.xti.bak
 _Boot/
 _CompileInfo/
 _Libraries/
@@ -47,6 +49,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+[Ll]ogs/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -143,9 +146,6 @@ $tf/
 _ReSharper*/
 *.[Rr]e[Ss]harper
 *.DotSettings.user
-
-# JustCode is a .NET coding add-in
-.JustCode
 
 # TeamCity is a build add-in
 _TeamCity*
