Do not repeatedly reprocess the COM ErrorList, as that is slow.
Read each entry in the list only once and store it natively. Then use that C#-native copy for further processing.

This shortens the "Asserting results..." phase from ~20s to ~0s.

--- a/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
+++ b/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="AutomationInterface.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="ErrorList.cs" />
     <Compile Include="FB_SkipAssertionsWhenFinished.cs" />
     <Compile Include="FB_AdjustAssertFailureMessageToMax252CharLengthTest.cs" />
     <Compile Include="FB_AnyPrimitiveTypes.cs" />
