Solved the following issues:
#70 - "Implement optional parameters for the test results" (specifically adding the number of asserts per test and adding the logging of it to ADS)
#85 - "LineIDs necessary?"
#86 - "Assert results provide only failed assert statistics"

Updated the CONTRIBUTING to make sure that any new contributors use separate LineIDs.
Added new test code for all new functionality in the verifier (TwinCAT + .NET).

--- a/TcUnit-Verifier/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
+++ b/TcUnit-Verifier/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
@@ -55,6 +55,7 @@
     <Compile Include="AutomationInterface.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="ErrorList.cs" />
+    <Compile Include="FB_TestNumberOfAssertionsCalculation.cs" />
     <Compile Include="FB_WriteProtectedFunctions.cs" />
     <Compile Include="FB_ExtendedTestInformation.cs" />
     <Compile Include="FB_SkipAssertionsWhenFinished.cs" />
