Address issues in https://github.com/tcunit/TcUnit/pull/91 (#1)
* Fix tabs and comment

* Remove "Cf" prefix associated with Codesys library

* Align variable naming with library conventions

* Rename xUnit-params so that it's clear that they relate to the xUnit reporting and not to the TcUnit framework in general.

* Fix param not updated in refactor

* Revert change to tsproj file.

* Revert change to tsproj realtime settings

* Add TestStreamBuffer tests to Verifier

* Create independent tests

* Add FileControl tests to Verifier

* Add FileControl test to project

* Added tests for XmlControl to Verifier

* Fixed issue in test

* Change XML structure to test another scenario

* Remove line ids

Co-authored-by: David Freiberger <david.freiberger@cellares.com>

--- a/TcUnit-Verifier/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
+++ b/TcUnit-Verifier/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
@@ -55,6 +55,9 @@
     <Compile Include="AutomationInterface.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="ErrorList.cs" />
+    <Compile Include="FB_TestXmlControl.cs" />
+    <Compile Include="FB_TestFileControl.cs" />
+    <Compile Include="FB_TestStreamBuffer.cs" />
     <Compile Include="FB_TestNumberOfAssertionsCalculation.cs" />
     <Compile Include="FB_WriteProtectedFunctions.cs" />
     <Compile Include="FB_ExtendedTestInformation.cs" />
