--- a/TcUnit-Verifier/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
+++ b/TcUnit-Verifier/TcUnit-Verifier_DotNet/TcUnit-Verifier/TcUnit-Verifier.csproj
@@ -55,6 +55,7 @@
     <Compile Include="AutomationInterface.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="ErrorList.cs" />
+    <Compile Include="FB_EmptyAssertionMessage.cs" />
     <Compile Include="FB_TestXmlControl.cs" />
     <Compile Include="FB_TestFileControl.cs" />
     <Compile Include="FB_TestStreamBuffer.cs" />
