--- a/TcUnit-Verifier/TcUnit-Verifier_DotNet/TcUnit-Verifier/log4net.config
+++ b/TcUnit-Verifier/TcUnit-Verifier_DotNet/TcUnit-Verifier/log4net.config
@@ -6,7 +6,7 @@
   </root>
   <appender name="console" type="log4net.Appender.ConsoleAppender">
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%utcdate{yyyy-MM-dd HH:mm:ss} - %message%newline" />
+      <conversionPattern value="%utcdate{yyyy-MM-dd HH:mm:ss} [%-5level] - %message%newline" />
     </layout>
   </appender>
   <appender name="file" type="log4net.Appender.RollingFileAppender">
@@ -15,7 +15,7 @@
     <staticLogFileName value="false" />
     <appendToFile value="true" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%utcdate{yyyy-MM-dd HH:mm:ss} - %message%newline" />
+      <conversionPattern value="%utcdate{yyyy-MM-dd HH:mm:ss} [%-5level] - %message%newline" />
     </layout>
   </appender>
 </log4net>
