Created jekyll configuration and website.

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,10 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Jekyll
+_site
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
