Updated documentation: Started with FAQ and programming example.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -35,6 +35,8 @@ theme: minima
 header_pages:
   - introduction-user-guide.md
   - unit-testing-concepts.md
+  - programming-example.md
+  - faq.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
